--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@vonage/server-sdk": "^2.10.7-beta-2",
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
