--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "firebase": "^9.6.6",
     "firebase-admin": "^10.0.2",
     "firebaseui": "^6.0.0",
+    "googleapis": "^97.0.0",
     "helmet": "^5.0.2",
+    "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
+    "mdb-ui-kit": "^3.11.0",
     "twilio": "^3.75.0",
     "xss-clean": "^0.1.1"
   },
