--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@sendgrid/mail": "^7.6.2",
     "@vonage/server-sdk": "^2.10.7-beta-2",
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
@@ -30,10 +31,13 @@
     "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
     "mdb-ui-kit": "^3.11.0",
+    "morgan": "^1.10.0",
+    "ngrok": "^4.3.1",
+    "serve-favicon": "^2.5.0",
     "twilio": "^3.75.0",
     "xss-clean": "^0.1.1"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=16.13.1"
   }
 }
