--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@popperjs/core": "^2.11.2",
-    "@sendgrid/mail": "^7.6.2",
-    "@vonage/server-sdk": "^2.10.7-beta-2",
-    "body-parser": "^1.19.2",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.1",
-    "cookie-parser": "^1.4.6",
-    "csurf": "^1.11.0",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "express-ejs-layouts": "^2.5.1",
-    "firebase": "^9.6.6",
-    "firebase-admin": "^10.0.2",
-    "firebaseui": "^6.0.0",
-    "googleapis": "^97.0.0",
-    "helmet": "^5.0.2",
-    "jquery": "^3.6.0",
-    "material-design-icons": "^3.0.1",
-    "mdb-ui-kit": "^3.11.0",
-    "morgan": "^1.10.0",
-    "ngrok": "^4.3.1",
-    "serve-favicon": "^2.5.0",
-    "twilio": "^3.75.0",
-    "xss-clean": "^0.1.1"
-  },
-  "engines": {
-    "node": ">=16.13.1"
-  }
+	"name": "express",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon server.js",
+		"sass": "node-sass -w ./public/sass/main.scss -o ./public/css/main.css"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@popperjs/core": "^2.11.2",
+		"@sendgrid/mail": "^7.6.2",
+		"@vonage/server-sdk": "^2.10.7-beta-2",
+		"body-parser": "^1.19.2",
+		"bootstrap": "^5.1.3",
+		"bootstrap-icons": "^1.8.1",
+		"cookie-parser": "^1.4.6",
+		"csurf": "^1.11.0",
+		"dotenv": "^16.0.0",
+		"ejs": "^3.1.6",
+		"express": "^4.17.2",
+		"express-ejs-layouts": "^2.5.1",
+		"firebase": "^9.6.6",
+		"firebase-admin": "^10.0.2",
+		"firebaseui": "^6.0.0",
+		"googleapis": "^97.0.0",
+		"helmet": "^5.0.2",
+		"jquery": "^3.6.0",
+		"material-design-icons": "^3.0.1",
+		"mdb-ui-kit": "^3.11.0",
+		"morgan": "^1.10.0",
+		"ngrok": "^4.3.1",
+		"serve-favicon": "^2.5.0",
+		"twilio": "^3.75.0",
+		"xss-clean": "^0.1.1"
+	},
+	"engines": {
+		"node": ">=16.13.1"
+	}
 }
