--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js",
-		"sass": "node-sass -w ./public/sass/main.scss -o ./public/css"
+		"start": "node server.js"
 	},
 	"keywords": [],
 	"author": "",
