--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js"
+		"start": "nodemon server.js",
+		"sass": "node-sass -w ./public/sass/main.scss -o ./public/css"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,7 +24,7 @@
 		"ejs": "^3.1.6",
 		"express": "^4.17.2",
 		"express-ejs-layouts": "^2.5.1",
-		"firebase": "^9.6.6",
+		"firebase": "^9.6.11",
 		"firebase-admin": "^10.0.2",
 		"firebaseui": "^6.0.0",
 		"googleapis": "^97.0.0",
