--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "express",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
+	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon server.js",
@@ -15,11 +16,13 @@
 		"@popperjs/core": "^2.11.2",
 		"@sendgrid/mail": "^7.6.2",
 		"@vonage/server-sdk": "^2.10.7-beta-2",
+		"axios": "^0.27.2",
 		"body-parser": "^1.19.2",
 		"bootstrap": "^5.1.3",
 		"bootstrap-icons": "^1.8.1",
 		"cookie-parser": "^1.4.6",
 		"csurf": "^1.11.0",
+		"dayjs": "^1.11.2",
 		"dotenv": "^16.0.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.2",
