--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node server.js",
+		"start": "nodemon server.js",
 		"sass": "node-sass -w ./public/sass/main.scss -o ./public/css"
 	},
 	"keywords": [],
