--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@google-cloud/bigquery": "^6.0.0",
 		"@google-cloud/connect-firestore": "^2.0.2",
 		"@google-cloud/firestore": "^5.0.2",
-		"@google-cloud/storage": "^6.0.1",
+		"@google-cloud/storage": "^6.2.0",
 		"@popperjs/core": "^2.11.2",
 		"@sendgrid/mail": "^7.6.2",
 		"@vonage/server-sdk": "^2.10.7-beta-2",
@@ -47,6 +47,7 @@
 		"firebase-admin": "^10.0.2",
 		"firebaseui": "^6.0.0",
 		"firestore-store": "^2.0.2",
+		"google-auth-library": "^8.0.3",
 		"googleapis": "^97.0.0",
 		"helmet": "^5.0.2",
 		"jquery": "^3.6.0",
