--- a/package.json
+++ b/package.json
@@ -3,41 +3,29 @@
 	"version": "1.0.0",
 	"description": "Demo for a final project for a bachelor's degree in computer science",
 	"type": "module",
+	"license": "MIT",
 	"scripts": {
 		"start": "node ./server.js"
 	},
 	"author": "Guy Shaked",
 	"dependencies": {
 		"@google-cloud/bigquery": "^6.0.0",
-		"@popperjs/core": "^2.11.2",
-		"@sendgrid/mail": "^7.6.2",
-		"@vonage/server-sdk": "^2.10.7-beta-2",
-		"axios": "^0.27.2",
-		"body-parser": "^1.19.2",
-		"bootstrap": "^5.1.3",
-		"bootstrap-icons": "^1.8.1",
-		"compression": "^1.7.4",
+		"@sendgrid/mail": "^7.7.0",
+		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
-		"cookie-session": "^2.0.0",
 		"csurf": "^1.11.0",
-		"dayjs": "^1.11.2",
-		"dotenv": "^16.0.0",
-		"ejs": "^3.1.6",
-		"express": "^4.17.2",
+		"dayjs": "^1.11.3",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
 		"express-react-views": "^0.11.0",
-		"express-session": "^1.17.3",
-		"firebase": "^9.6.11",
-		"firebase-admin": "^10.0.2",
-		"helmet": "^5.0.2",
-		"jquery": "^3.6.0",
-		"material-design-icons": "^3.0.1",
-		"morgan": "^1.10.0",
-		"ngrok": "^4.3.1",
-		"react": "^16.14.0",
-		"react-dom": "^16.14.0",
+		"firebase": "^9.8.4",
+		"firebase-admin": "^11.0.0",
+		"helmet": "^5.1.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"read-appsettings-json": "^1.0.98",
 		"serve-favicon": "^2.5.0",
-		"twilio": "^3.75.0",
+		"twilio": "^3.77.3",
 		"uuid": "^8.3.2",
 		"xss-clean": "^0.1.1"
 	},
