--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"main": "server.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "node ./server.js"
+		"start": "node ./server.js",
+		"dev": "nodemon ./server.js"
 	},
 	"author": "Guy Shaked",
 	"dependencies": {
